@@ -63,6 +63,7 @@ ProjectCenter 0.6
   project types                                                 ???
 - Add "Palette" project type                                    ???
 - Add "Component" project type                                  ???
+- Fix reported bugs                                             ???
 - New icons. Need volonteers!!!                                 ???
 
 ProjectCenter 0.7
